assets/css/style.css
/* general page styling */

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#header-div {
    background-color: #FFFFFF;
    font-family: "teko", sans-serif;
    font-weight: 500;
    font-size: 24px;
    text-align: center;
}


.navbar-brand {
    margin-right: 0px;
}

.nav-link:hover {
    background-color: #7df9ffb3
}

h1 {
    font-family: "teko", sans-serif;
    font-weight: 500;
    color: #43464b;
}

h2 {
    font-family: "teko", sans-serif;
    font-weight: 500;
    font-size: 32px;
}

h3 {
    font-family: "teko", sans-serif;
    font-weight: 500;
    font-size: 24px;
}

#form-background h3 {
    text-decoration: underline;
}

h4 {
    font-family: "teko", sans-serif;
    font-weight: 300;
    font-size: 20px;
    font-style: italic;
}

#footer-section {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #FFFFFF;
    color: white;
    text-align: center;
    height: 15%;
}

#external-resources-container a {
    text-decoration: none;
    font-style: italic;
    color: #fff;
}

#external-resources-container a:hover {
    color: #C6DAF1;
}

/* form styling */

#form-background {
    background-color: #ED6B47;
}

#form-container {
    padding: 0px;
    margin: auto;
    width: 100%;
    height: 100%;
}

#form-div {
    width: 50%;
    margin-top: 0;
    height: 100%;
    background-color: #fff;
}

#details-form {
    display: none;
    height: 100%;
    font-family: teko, sans-serif;
    font-weight: 300;
    font-size: 24px;
}

#button-container {
    width: 50%;
    text-align: center;
}

#start-button {
    margin-top: 25%;
    margin-bottom: 25%;
    background-color: #112A46;
    font-family: teko, sans-serif;
    border: none;
    cursor: pointer;
    box-shadow: 0 9px #999;
}

#start-button:hover {
    background-color: #7df9ffb3;
    color: #43464b;
}

#workoutinfo {
    text-align: center;
    font-family: teko, sans-serif;
    font-weight: 300;
    font-size: 24px;
}

.workout-info-next {
    display: none;
}

.workout-info-next h3 {
    font-size: 18px;
    font-weight: 500;
}

.workout-icon {
    font-size: 24px;
    color: #112A46;
}

.membership-status-hidden {
    display: none;
}

.membership-status-show {
    display: block;
    text-align: center;
    font-family: teko, sans-serif;
    font-weight: 300;
    font-size: 24px;
}

.quiz-background {
    background-color: #FFFFFF;
    border-style: solid;
    border-width: 5px;
    border-color: #7df9ffb3;
}

.stats-hidden {
    display: none;
}

#times {
    text-align: center;
}

.times-hidden {
    display: none;
}

.btn-primary {
    background-color: #43464b;
    border: none;
}

.btn-primary:hover {
    background-color: #ED6B47;
}

.hiddenbutton {
    display: none;
}

input[type="radio"]:checked {
    accent-color: #7df9ffb3;
}

#form-submit-button {
    text-align: center;
}

/* form progress bar */

#form-progress {
    text-align: center;
}

.step {
    height: 15px;
    width: 15px;
    margin: 10px 2px;
    background-color: #FFFFFF;
    border: none;
    border-radius: 50%;
    display: inline-block;
    opacity: 1;
}

.steps-hidden {
    display: none;
}

#results {
    height: 50px;
    width: 50px;
    background-color: #fafafa;
}

.results-hidden {
    display: none;
}

.results-shown {
    padding: 10px;
    background-color: #43464b;
    margin: auto;
    max-width: 80%;
    max-height: 80%;
    width: fit-content;
    text-align: center;
    margin-top: 25px;
    font-family: "teko", sans-serif;
    font-weight: 300;
    font-size: 18px;
    color: #fafafa;
}

.card {
    transform-style: preserve-3d;
    transition: all 08s ease;
}

.front {
    backface-visibility: hidden;
    color: #43464b;
    max-width: 100%;
    width: fit-content;
    text-align: center;
    font-family: "teko", sans-serif;
    font-weight: 300;
    font-size: 18px;
}

.back {
    backface-visibility: hidden;
    transform: rotateY(180deg);
    background-color: #43464b;
    max-width: 100%;
    width: fit-content;
    text-align: center;
    font-family: "teko", sans-serif;
    font-weight: 300;
    font-size: 18px;
    color: #fafafa;
}

.flipCard {
    transform: rotateY(180deg);
}

.table {
    margin-bottom: 0px;
}

#footer-logo {
    display: none;
}

/* about page styles */

.text-container {
    width: 100%;
    height: 100%;
    font-family: "teko", sans-serif;
    font-weight: 300;
    font-size: 22px;
    color: #fafafa;
    background-color: #ED6B47;
    text-decoration: none;
}

.text-box {
    padding: 15px;
    width: 50%;
    margin: auto;
    background-color: #112A46;
    text-align: center;
    text-decoration: none;
}

#get-started-link {
    font-weight: 500;
    color: #ED6B47;
}

#get-started-link:hover {
    background-color: #fafafa;
    color: #112A46;
}

/* 404 page styles */

#file_not_found {
    display: flex;
    height: 100vh;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

/* media queries */

@media (max-width: 540px) {
    #header-logo {
        display: none;
    }

    h1 {
        font-size: 24px;
    }

    #header-div {
        font-size: 18px;
    }

    #footer-logo {
        display: block;
        width: 50%;
        height: 50%;
        margin: auto;
    }

    .text-container {
        text-align: center;
    }

    .text-box {
        width: 100%;
        border-style: solid;
        border-color: #ED6B47;
        font-size: 18px;
    }

    #footer-section {
        position: relative;
    }

    .nav-link {
        font-style: italic;
    }

}

@media (max-width: 1200px) {
    #text-box-faq {
        width: 100%;
        font-size: 18px;
    }

    h2 {
        font-size: 20px;
    }
}

@media (max-width: 800px) {

    .text-box {
        width: 100%;
        border-style: solid;
        border-color: #ED6B47;
    }

    #text-box-faq {
        font-size: 16px;
    }

    h2 {
        font-size: 18px;
    }
}

@media (min-width: 541px) {
    .nav-left {
        border-right: 1.5px solid #43464b;
    }
}

@media (max-width: 1517px) {
    #footer-section {
        position: relative;
    }
}

